test github actions

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -24,21 +24,55 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
 
-      ## Grant execute permission for gradlew
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
       ## gradle build without test jar
       - name: Build with Gradle
-        run: ./gradlew clean build # -x test
+        run: |
+          chmod +x gradlew
+          ./gradlew clean build # -x test
         shell: bash
 
       ## docker build & push to hub
-      - name: Process CD
+      - name: Save to container registry
+        id: GET_LAST_COMMIT_HASH
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
           
-          REPO_OFFER_DEV=${{ secrets.DOCKER_USERNAME }}/offer-dev
+          LAST_COMMIT_HASH=$(git log -1 --pretty=%h)
+          REPO=${{ secrets.DOCKER_USERNAME }}/offer-dev
+          DOCKER_FILE=${{ secrets.DOCKER_USERNAME }}/offer-dev
+          IMAGE_NEW_TAG="${REPO}:${LAST_COMMIT_HASH}"
+          IMAGE_LATEST_TAG="${REPO}:latest"
+          BUILD_TIMESTAMP=$( date '+%F_%H:%M:%S' )
           
-          chmod +x ./scripts/build_docker.sh
-          ./scripts/build_docker.sh ${REPO_OFFER_DEV} ${DOCKER_FILE} ${{ secrets.GIT_USER_EMAIL }} ${{ secrets.GIT_USER_NAME }}
+          # build and push container image
+          docker build \
+            -t "$IMAGE_NEW_TAG" -t "$IMAGE_LATEST_TAG" \
+            --build-arg VERSION="$LAST_COMMIT_HASH" --build-arg BUILD_TIMESTAMP="$BUILD_TIMESTAMP" \
+            -f "$DOCKER_FILE" .
+          
+          docker push "$IMAGE_NEW_TAG"
+          docker push "$IMAGE_LATEST_TAG"
+          
+          echo ">> New container image tag: $LAST_COMMIT_HASH"
+          echo "::set-output name=LAST_COMMIT_HASH::$LAST_COMMIT_HASH"
+
+      - name: App manifest repository checkout
+        uses: actions/checkout@v2
+        with:
+          repository: price-offer/application-manifests
+          token: ${{ secrets.TRIGGER_ARGO_CD_GITHUB_TOKEN }}
+          path: application-manifests
+
+      - name: Push app manifest repo
+        run: |
+          LAST_COMMIT_HASH=${{ steps.GET_LAST_COMMIT_HASH.outputs.LAST_COMMIT_HASH }}
+          
+          cd application-manifests
+          sed -i "s/offer-dev:.*\$/offer-dev:${LAST_COMMIT_HASH}/g" ./services/offer-be-rollout/rollout.yaml
+
+          git config --global user.email ${{ secrets.GIT_USER_EMAIL }}
+          git config --global user.name ${{ secrets.GIT_USER_NAME }}
+
+          git add ./services/offer-be-rollout/rollout.yaml
+          git commit -m "[FROM GitHub Actions] Container Image Tag was changed to ${NEW_TAG}"
+          git push
