--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -2,7 +2,7 @@ name: Deploy to Dev Server
 
 on:
   push:
-    branches: [ "cicd-test" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
