--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ out/
 
 ## secret.yml 파일은 서브모듈에서 관리한다.
 /src/main/resources/application-secret.yml
+
+## API 문서는 빌드시 자동생성된다.
+/src/main/resources/static/docs/index.html
