--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -28,6 +28,8 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x gradlew
+          git submodule init
+          git submodule update
           ./gradlew clean build # -x test
         shell: bash
 
