--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    // feign client
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
-    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+    // webflux
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     //jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
