feat: 이미지 업로드 로직 구현

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // DNS resolver native library for M1 Mac
+    implementation("io.netty:netty-resolver-dns-native-macos:4.1.79.Final:osx-aarch_64")
 
     runtimeOnly 'com.h2database:h2'
 
