feat: yaml 프로파일 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 spring:
   profiles:
+    active: local
     include: secret
-
-file:
-  upload-dir: images
 
 server:
   port : 7070
+
+--- # local
+spring:
+  profiles:
+    - local
+  group:
+    local:
+      - secret-local
