feat: review 조회 API 임시 구현

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,6 @@ gradle-app.setting
 
 ## API 문서는 빌드시 자동생성된다.
 /src/main/resources/static/docs/index.html
+
+# generated file
+src/main/generated/
