--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
+    // swagger
+    implementation('io.springfox:springfox-boot-starter:3.0.0')
 }
 
 tasks.register('copySecret', Copy) {
