--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,12 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:~/test
+    hikari:
+      connection-timeout: 30000
+      maximum-pool-size: 8
+      minimum-idle: 5
+      idle-timeout: 600000
+      validation-timeout: 5000
     username: sa
     password:
 
