feat: 이미지 업로드 및 조회로직 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,7 @@ spring:
 
 file:
   upload-dir: images
+  server-path: http://localhost:7070/images
 
 ---
 spring:
@@ -60,3 +61,4 @@ spring:
       on-profile: prod
 file:
   upload-dir: /home/ubuntu/images
+  server-path: https://offer-be.kro.kr/api/images/
