feat: 이미지 경로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,4 +61,4 @@ spring:
       on-profile: prod
 file:
   upload-dir: /home/ubuntu/images
-  server-path: https://offer-be.kro.kr/api/images/
+  server-path: https://offer-be.kro.kr/images/
