--- a/.github/workflows/deploy-prod.yaml
+++ b/.github/workflows/deploy-prod.yaml
@@ -8,7 +8,7 @@ permissions:
   contents: read
 
 env:
-  DOCKER_FILE: docker/Dockerfile-dev
+  DOCKER_FILE: docker/Dockerfile-prod
 
 jobs:
   build_and_deploy_to_dev:
